# game-agents-hs

./: .gitignore  LICENSE  README.md  game-agents-hs.cabal  stack.yaml
app/: Main.hs
src/: Game.hs
